src/test/ui/const-generics/defaults/needs-feature.stderr
error: type parameters must be declared prior to const parameters
  --> $DIR/needs-feature.rs:4:26
   |
LL | struct A<const N: usize, T=u32>(T);
   |         -----------------^----- help: reorder the parameters: lifetimes, then types: `<T, const N: usize>`

error[E0658]: const generics are unstable
  --> $DIR/needs-feature.rs:4:16
   |
LL | struct A<const N: usize, T=u32>(T);
   |                ^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
